Reduced font size for event time (fixed 2-line overflow)

--- a/resources/css/eventhub.css
+++ b/resources/css/eventhub.css
@@ -46,7 +46,7 @@ p.event-description {
 	line-height: 23px;
 }
 .event-time strong {
-	font-size: 16px;
+	font-size: 15px;
 }
 .event-author {
 	padding: 21px 10px 0 0;
